Done for night, working on fetch components

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
     justify-content: center;
     margin: 0.5rem;
     border: 2px solid black;
+    border-radius: 50px;
     height: 16rem;
     width: 16rem;
     background-color: beige;
