--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,16 @@ body {
     width: 16rem;
     background-color: beige;
 }
+
+button:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 53, 0.2);
+}
+
+button:hover {
+  box-shadow: 0 16px 32px rgba(0, 0, 53, 0.4);
+}
+
+button:active {
+  box-shadow: inset 0 4px 8px rgba(0, 0, 53, 0.2);
+  transform: translateY(2px);
+}
