--- a/src/App.css
+++ b/src/App.css
@@ -28,17 +28,47 @@ body {
     height: 16rem;
     width: 16rem;
     background-color: beige;
+    box-shadow: 0 8px 16px rgba(0, 0, 53, 0.2);
 }
 
-button:hover {
-  box-shadow: 0 8px 16px rgba(0, 0, 53, 0.2);
-}
-
-button:hover {
+.card:hover {
   box-shadow: 0 16px 32px rgba(0, 0, 53, 0.4);
 }
 
-button:active {
+.card:active {
   box-shadow: inset 0 4px 8px rgba(0, 0, 53, 0.2);
   transform: translateY(2px);
+}
+
+.gameOver {
+  /* display: none; */
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  border: 2px solid black;
+  border-radius: 20px;
+  background-color: brown;
+  padding: 2rem 3rem;
+}
+
+.gameOverShow {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.gameOverButton {
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+.gameOverButton:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 53, 0.2);
+}
+
+.gameOverButton:active {
+    transform: translateY(1px);
 }
